--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+  <head>
+    <title>I Made This</title>
+
+   <div class="Header">
+    <ul>
+    	<li>Home</li>
+    	<li>About</li>
+    	<li>Sign Up</li>
+    	<li>Login</li>
+    </ul>
+   </div>
+  </head>
+
+  <body>
+
+  	<div class="Main-Picture">
+  		<img src="http://i.kinja-img.com/gawker-media/image/upload/mupfxslphdgwwrtdkrgq.jpg">
+  		<p>We shall prevail!</p>
+  	</div>
+
+    <div class="Me">
+      <a href="www.ksl.com"><img src="/Users/JesseHadley/Documents/Link.JPG"></a>
+  </body>
+  </html>
+  
+
