--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   	</div>
 
     <div class="Me">
-      <a href="www.ksl.com"><img src="/Users/JesseHadley/code/Git/website/j-hadley.github.io/images/Link.JPG"></a>
+      <a href="www.ksl.com"><img src="/j-hadley.github.io/images/Link.JPG"></a>
   </body>
   </html>
   
