--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   	</div>
 
     <div class="Me">
-      <a href="www.ksl.com"><img src="/j-hadley.github.io/images/Link.JPG"></a>
+      <a href="www.ksl.com"><img src="https://github.com/j-hadley/j-hadley.github.io/blob/master/images/Link.JPG"></a>
   </body>
   </html>
   
