--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <head>
     <title>I Made This</title>
+<link type="text/css" rel="stylesheet" href="main.css" />
 
    <div class="Header">
     <ul>
