--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
 
   	<div class="Main-Picture">
-  		<img src="http://i.kinja-img.com/gawker-media/image/upload/mupfxslphdgwwrtdkrgq.jpg">
-  		<p>We shall prevail!</p>
+  		<img class"block-img" src="http://i.kinja-img.com/gawker-media/image/upload/mupfxslphdgwwrtdkrgq.jpg">
+  		<p class="block">We shall prevail!</p>
   	</div>
 
     <div class="Me">
