--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link type="text/css" rel="stylesheet" href="/main.css" />
 
    <div class="Header">
-    <ul>
+    <ul id="menu">
     	<li>Home</li>
     	<li>About</li>
     	<li>Sign Up</li>
