--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <title>I Made This</title>
-<link type="text/css" rel="stylesheet" href="/main.css" />
+<link type="text/css" rel="stylesheet" href="/css/main.css" />
 
    <div class="Header">
     <ul id="menu">
