--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
    <div class="Header">
     <ul id="menu">
-    	<li>Home</li>
-    	<li>About</li>
-    	<li>Sign Up</li>
-    	<li>Login</li>
+    	<li><a href="#">Home</a></li>
+    	<li><a href="#">About</a></li>
+    	<li><a href="#">Sign Up</a></li>
+    	<li><a href="#">Login</a></li>
     </ul>
    </div>
   </head>
