--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
-<!DOCTYPE html>
-  <head>
-    <title>I Made This</title>
-<link type="text/css" rel="stylesheet" href="/css/main.css" />
+<!doctype html>
+<html>
+<head>
+	<title>I Made This</title>
+<link rel="stylesheet" href="main.css">
+	
+	<div class="Header">
+	<ul id="menu">
+	<li><a href="#">Home</a></li>
 
-   <div class="Header">
-    <ul id="menu">
-    	<li><a href="#">Home</a></li>
-    	<li><a href="#">About</a></li>
-    	<li><a href="#">Sign Up</a></li>
-    	<li><a href="#">Login</a></li>
-    </ul>
-   </div>
-  </head>
+	<li><a href="#">About</a></li>
 
-  <body>
+	<li><a href="#">Sign Up</a></li>
 
-  	<div class="Main-Picture">
-  		<img class"block-img" src="http://i.kinja-img.com/gawker-media/image/upload/mupfxslphdgwwrtdkrgq.jpg">
-  		<p class="block">We shall prevail!</p>
-  	</div>
+	<li><a href="#">Login</a></li>
 
-    <div class="Me">
-      <a href="www.ksl.com"><img src="https://github.com/j-hadley/j-hadley.github.io/blob/master/images/Link.JPG"></a>
-  </body>
-  </html>
-  
+	</ul>
+	</div>
+	
+	
+	<body>
+	
+	<div class="Main-Picture">
+	<!-- I ADDED THE "CENTER" TAG HERE TO POSITION THE PICTURE--><center><img class"block-img" src="http://i.kinja-img.com/gawker-media/image/upload/mupfxslphdgwwrtdkrgq.jpg">
+</center>
+	<p class="block">We <u>shall</u> <!--THIS IS WHERE YOU WOULD ADD THE UNDER LINE CODE <u>...</u>--> prevail!</p>
+	</div>
+	
+	<div class="Me">
+	<a href="www.ksl.com"><img src="https://github.com/j-hadley/j-hadley.github.io/blob/master/images/Link.JPG"></a>
 
+	</body>
+
+
+</body>
+</html>
