--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/link.jpg" alt="">
                     <div class="intro-text">
-                        <span class="name">"If you always do what you've always done, you'll always get what you've always got." -Henry Ford</span>
+                        <span class="name">"If you always do what you've always done, you'll always get what you've always got."<br>-Henry Ford</br></span>
                         <hr class="star-light">
                         <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
                     </div>
