--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.pgn" alt="">
+                    <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
                         <span class="name">"If you always do what you've always done, you'll always get what you've always got."<br>-Henry Ford</br></span>
                         <hr class="star-light">
