--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="intro-text">
                         <span class="name">"If you always do what you've always done, you'll always get what you've always got."<br>-Henry Ford</br></span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Web Development - Web Design - User Experience</span>
                     </div>
                 </div>
             </div>
@@ -168,10 +168,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance. It is inspiring to look at something you created almost out of nothing; it is something to be proud of.  </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>It is this commitment that drives me to excel on each project I work on. The end goal for each project varies, and is why I listen and accommodate the needs of the client to cultivate a business relationship that creates a win-win environment.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -244,7 +244,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>Bountiful, UT</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -277,7 +277,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; Jesse Hadley 2015
                     </div>
                 </div>
             </div>
