Email Send update

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>Jesse Hadley</h3>
+                        <p>For Web Development inquiries, send a message in the form above</p>
                     </div>
                 </div>
             </div>
