--- a/index.html
+++ b/index.html
@@ -193,11 +193,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form action="//flipmail.co/api/Dul8YbqnKrJwgEohZL0H" method="post">
-   <input type="text" name="name">
-   <input type="email" name="email">
-   <textarea name="message"></textarea>
-   <button type="submit">Submit Form</button>
+                    <form method="post" action="//flipmail.co/api/your_key">
+    <input type="hidden" name="_subject" value="Web Development">
+    <input type="hidden" name="_replyto" value="jessewhadley@hotmail.com">
+    <input type="text" name="_honey" value="" style="display:none">
+    <input type="text" name="name" placeholder="Name">
+    <input type="email" name="email" placeholder="Email">
+    <textarea name="message" rows="3" placeholder="Message"></textarea>
+    <button type="submit">Send</button>
 </form>
                 </div>
             </div>
@@ -235,7 +238,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Jesse Hadley</h3>
-                        <p>For Web Development inquiries, send a message in the form above</p>
+                        <p>For Web Development inquiries, please send me a message in the form above</p>
                     </div>
                 </div>
             </div>
