--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     <input type="email" name="email" placeholder="Email">
     <textarea name="message" rows="3" placeholder="Message"></textarea>
     <button type="submit">Send</button>
+    <input type="hidden" name="_confirmation" value="<b>Thank you!</b> We have received your message and will get back to you asap.">
 </form>
                 </div>
             </div>
