--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <form method="post" action="//flipmail.co/api/your_key">
     <input type="hidden" name="_subject" value="Web Development">
     <input type="hidden" name="_replyto" value="jessewhadley@hotmail.com">
-    <input type="text" name="_honey" value="" style="display:none">
+    <input type="text" class="form-control" name="_honey" value="" style="display:none">
     <input type="text" name="name" placeholder="Name">
     <input type="email" name="email" placeholder="Email">
     <textarea name="message" rows="3" placeholder="Message"></textarea>
