--- a/index.html
+++ b/index.html
@@ -196,12 +196,18 @@
                     <form method="post" action="//flipmail.co/api/your_key">
     <input type="hidden" name="_subject" value="Web Development">
     <input type="hidden" name="_replyto" value="jessewhadley@hotmail.com">
-    <input type="text" class="form-control" name="_honey" value="" style="display:none">
-    <input type="text" name="name" placeholder="Name">
+    <input type="text" name="_honey" value="" style="display:none">
+    <input type="hidden" name="_confirmation" value="<b>Thank you!</b> We have received your message and will get back to you asap.">
+
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <input type="text" class="form-control" placeholder="Name" id="name">
+                       </div>
+                     </div>
+
     <input type="email" name="email" placeholder="Email">
     <textarea name="message" rows="3" placeholder="Message"></textarea>
     <button type="submit">Send</button>
-    <input type="hidden" name="_confirmation" value="<b>Thank you!</b> We have received your message and will get back to you asap.">
 </form>
                 </div>
             </div>
