--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Name</label>
                           <input type="text" class="form-control" placeholder="Name" id="name">
                        </div>
                      </div>
