--- a/index.html
+++ b/index.html
@@ -205,11 +205,32 @@
                           <input type="text" class="form-control" placeholder="Name" id="name">
                        </div>
                      </div>
-
-    <input type="email" name="email" placeholder="Email">
-    <textarea name="message" rows="3" placeholder="Message"></textarea>
-    <button type="submit">Send</button>
-</form>
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Email</label>
+                          <input type="email" class="form-control" placeholder="Email" id="email">
+                       </div>
+                     </div>
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Phone Number</label>
+                          <input type="text" class="form-control" placeholder="Phone Number" id="phone">
+                        </div>
+                     </div>
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Message</label>
+                          <textarea rows="5" class="form-control" placeholder="Message"></textarea>
+                       </div>
+                     </div>
+                     <br>
+                     <div id="success"></div>
+                       <div class="row">
+                          <div class="form-group col-xs-12">
+                           <button type="submit" class="btn btn-success btn-lg">Send</button>
+                          </div>
+                       </div>
+                    </form>
                 </div>
             </div>
         </div>
