--- a/index.html
+++ b/index.html
@@ -194,27 +194,23 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <form method="post" action="//flipmail.co/api/your_key">
-    <input type="hidden" name="_subject" value="Web Development">
-    <input type="hidden" name="_replyto" value="jessewhadley@hotmail.com">
-    <input type="text" name="_honey" value="" style="display:none">
-    <input type="hidden" name="_confirmation" value="<b>Thank you!</b> We have received your message and will get back to you asap.">
 
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Name</label>
-                          <input type="text" class="form-control" placeholder="Name" id="name">
+                          <input type="text" class="form-control" placeholder="Name">
                        </div>
                      </div>
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Email</label>
-                          <input type="email" class="form-control" placeholder="Email" id="email">
+                          <input type="email" class="form-control" placeholder="Email">
                        </div>
                      </div>
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Phone Number</label>
-                          <input type="text" class="form-control" placeholder="Phone Number" id="phone">
+                          <input type="text" class="form-control" placeholder="Phone Number">
                         </div>
                      </div>
                      <div class="row control-group">
