--- a/index.html
+++ b/index.html
@@ -193,40 +193,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form method="post" action="//flipmail.co/api/your_key">
-
-                     <div class="row control-group">
-                       <div class="form-group col-xs-12 floating-label-form-group controls">
-                          <label>Name</label>
-                          <input type="text" class="form-control" placeholder="Name">
-                       </div>
-                     </div>
-                     <div class="row control-group">
-                       <div class="form-group col-xs-12 floating-label-form-group controls">
-                          <label>Email</label>
-                          <input type="email" class="form-control" placeholder="Email">
-                       </div>
-                     </div>
-                     <div class="row control-group">
-                       <div class="form-group col-xs-12 floating-label-form-group controls">
-                          <label>Phone Number</label>
-                          <input type="text" class="form-control" placeholder="Phone Number">
-                        </div>
-                     </div>
-                     <div class="row control-group">
-                       <div class="form-group col-xs-12 floating-label-form-group controls">
-                          <label>Message</label>
-                          <textarea rows="5" class="form-control" placeholder="Message"></textarea>
-                       </div>
-                     </div>
-                     <br>
-                     <div id="success"></div>
-                       <div class="row">
-                          <div class="form-group col-xs-12">
-                           <button type="submit" class="btn btn-success btn-lg">Send</button>
-                          </div>
-                       </div>
-                    </form>
+                    <form action="//flipmail.co/api/Dul8YbqnKrJwgEohZL0H" method="post">
+   <input type="text" name="name">
+   <input type="email" name="email">
+   <textarea name="message"></textarea>
+   <button type="submit">Submit Form</button>
+</form>
                 </div>
             </div>
         </div>
