--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form action="//flipmail.co/api/Dul8YbqnKrJwgEohZL0H" method="post">
+                    <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate
+      action="https://jessehadley.wufoo.com/forms/z136qzby1rbr3k8/#public">
    <input type="text" name="name">
    <input type="email" name="email">
    <textarea name="message"></textarea>
