--- a/index.html
+++ b/index.html
@@ -193,13 +193,41 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate
-      action="https://jessehadley.wufoo.com/forms/z136qzby1rbr3k8/#public">
-   <input type="text" name="name">
-   <input type="email" name="email">
-   <textarea name="message"></textarea>
-   <button type="submit">Submit Form</button>
-</form>
+                    <form accept-charset="UTF-8" action="https://formkeep.com/f/0c3527a386e9" method="POST">
+                     <input type="hidden" name="utf8" value="✓">
+
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Name</label>
+                          <input type="text" class="form-control" placeholder="Name">
+                       </div>
+                     </div>
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Email</label>
+                          <input type="email" class="form-control" placeholder="Email">
+                       </div>
+                     </div>
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Phone Number</label>
+                          <input type="text" class="form-control" placeholder="Phone Number">
+                        </div>
+                     </div>
+                     <div class="row control-group">
+                       <div class="form-group col-xs-12 floating-label-form-group controls">
+                          <label>Message</label>
+                          <textarea rows="5" class="form-control" placeholder="Message"></textarea>
+                       </div>
+                     </div>
+                     <br>
+                     <div id="success"></div>
+                       <div class="row">
+                          <div class="form-group col-xs-12">
+                           <button type="submit" class="btn btn-success btn-lg">Send</button>
+                          </div>
+                       </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -496,7 +524,7 @@
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    
+
 
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
