--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form accept-charset="UTF-8" action="https://formkeep.com/f/0c3527a386e9" method="POST">
-                     <input type="hidden" name="utf8" value="✓">
+                    <form action="//flipmail.co/api/Dul8YbqnKrJwgEohZL0H" method="post">
 
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
