--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form action="//flipmail.co/api/Dul8YbqnKrJwgEohZL0H" method="post">
+                    <form action="//formspree.io/jessewhadley@hotmail.com"
+      method="POST">
 
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -217,6 +218,9 @@
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Message</label>
                           <textarea rows="5" class="form-control" placeholder="Message"></textarea>
+                          <input type="hidden" name="_next" value="//jessehadley.com" />
+                          <input type="hidden" name="_subject" value="New submission!" />
+                          
                        </div>
                      </div>
                      <br>
