redirect to thanks page

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                            <button type="submit" class="btn btn-success btn-lg">Send</button>
                           </div>
                        </div>
-                          <input type="hidden" name="_next" value="//jessehadley.com" />
+                          <input type="hidden" name="_next" value="//jessehadley.com/thanks" />
                           <input type="hidden" name="_subject" value="New submission!" />
                     </form>
                 </div>
