connect with me

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         <p>Bountiful, UT</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Let's Connect</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
