--- a/index.html
+++ b/index.html
@@ -249,19 +249,19 @@
                         <h3>Let's Connect</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://twitter.com/jesse10_123" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i>img src = "images/twitter-icon.png"</a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://www.facebook.com/jessewhadley" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i>img src = "images/facebook-icon.png"</a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://github.com/j-hadley" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i>img src = "</a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/jesse-hadley-a1190632" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i>img src = "images/</a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://www.google.com/+JesseHadley-connect" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i>img src = "images/</a>
                             </li>
                         </ul>
                     </div>
