--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
                                 <a href="https://www.facebook.com/jessewhadley" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i>img src = "images/facebook-icon.png"</a>
                             </li>
                             <li>
-                                <a href="https://github.com/j-hadley" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i>img src = "</a>
+                                <a href="https://github.com/j-hadley" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i>img src = "images/git-icon.png"</a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/jesse-hadley-a1190632" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i>img src = "images/</a>
+                                <a href="https://www.linkedin.com/in/jesse-hadley-a1190632" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i>img src = "images/linkedin-icon.png"/</a>
                             </li>
                             <li>
-                                <a href="https://www.google.com/+JesseHadley-connect" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i>img src = "images/</a>
+                                <a href="https://www.google.com/+JesseHadley-connect" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i>img src = "images/googleplus-icon.png"</a>
                             </li>
                         </ul>
                     </div>
