--- a/index.html
+++ b/index.html
@@ -252,16 +252,16 @@
                                 <a href="https://twitter.com/jesse10_123" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i><img class = "icons-connect" src = "images/twitter-icon.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/jessewhadley" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i><img class = "icons-connect" src = "images/facebook-icon.png"></a>
+                                <a href="https://www.facebook.com/jessewhadley" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i><img class = "icons-fb" src = "images/facebook-icon.png"></a>
                             </li>
                             <li>
                                 <a href="https://github.com/j-hadley" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i><img class = "icons-connect" src = "images/git-icon.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/jesse-hadley-a1190632" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i><img class = "icons-connect" src = "images/linkedin-logo.png"></a>
+                                <a href="https://www.linkedin.com/in/jesse-hadley-a1190632" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i><img class = "icons-link" src = "images/linkedin-logo.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.google.com/+JesseHadley-connect" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i><img  class = "icons-connect" src = "images/googleplus-icon.png"></a>
+                                <a href="https://www.google.com/+JesseHadley-connect" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i><img  class = "icons-goog" src = "images/googleplus-icon.png"></a>
                             </li>
                         </ul>
                     </div>
