--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                 <a href="https://www.linkedin.com/in/jesse-hadley-a1190632" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i><img class = "icons-link" src = "images/linkedin-logo.png"></a>
                             </li>
                             <li>
-                                <a href="https://www.google.com/+JesseHadley-connect" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i><img  class = "icons-goog" src = "images/googleplus-icon.png"></a>
+                                <a href="https://www.google.com/+JesseHadley-connect" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i><img  class = "icons-goog" src = "images/google-plus-icon.png"></a>
                             </li>
                         </ul>
                     </div>
