--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">"If you always do what you've always done, you'll always get what you've always got."<br>-Henry Ford</br></span>
+                        <span class="name">Together, we can open the door to new possibilities</span>
                         <hr class="star-light">
                         <span class="skills">Web Development - Web Design - User Experience</span>
                     </div>
