--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class = "banner">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Together, we can open the door to new possibilities</span>
+                        <span class="name">Open the door to new possibilities</span>
                         <hr class="star-light">
                         <span class="skills">Web Development - Web Design - User Experience</span>
                     </div>
