--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
                         <span class="name">Open the door to new possibilities</span>
                         <hr class="star-light">
@@ -164,6 +163,9 @@
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
                     <hr class="star-light">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/profile.png" alt="">
                 </div>
             </div>
             <div class="row">
