--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name">Open the door to new possibilities</span>
+                        <p class="name">Open the door to new possibilities</p>
                         <hr class="star-light">
-                        <span class="skills">Web Development - Web Design - User Experience</span>
+                        <p class="skills">Web Development - Web Design - User Experience</p>
                     </div>
                 </div>
             </div>
