--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <p class="name">Open the door to new possibilities</p>
-                        <hr class="star-light">
+                          <div>
+                            <hr class="star-light">
+                          </div> 
                         <p class="skills">Web Development - Web Design - User Experience</p>
                     </div>
                 </div>
