--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <p class="name">Open the door to new possibilities</p>
-                          <br>
+                          <hr class = "line-separator"></hr>
                         <p class="skills">Web Development - Web Design - User Experience</p>
                     </div>
                 </div>
