--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                 <a href="https://www.facebook.com/jessewhadley" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i><img class = "icons-fb" src = "images/facebook-icon.png"></a>
                             </li>
                             <li>
-                                <a href="https://github.com/j-hadley" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i><img class = "icons-git" src = "images/git-icon.png"></a>
+                                <a href="https://github.com/j-hadley" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i><img class = "icons-git" src = "images/github-icon.png"></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/jesse-hadley-a1190632" target = '_blank' class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i><img class = "icons-link" src = "images/linkedin-logo.png"></a>
