--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </nav>
 
     <!-- Header -->
+<div class = "header-about">
     <header class = "banner">
         <div class="container">
             <div class="row">
@@ -109,6 +110,7 @@
             </div>
         </div>
     </section>
+</div>
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
