--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
 
     <!-- About Section -->
-    <section class="sucess" id="about">
+    <section class="banner" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
