--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 inline-about">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance. 
                         <br>
@@ -111,6 +111,7 @@
 </div>
 
     <!-- Portfolio Grid Section -->
+<div class = "port-background">
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -183,6 +184,7 @@
             </div>
         </div>
     </section>
+</div>
 
     <!-- Contact Section -->
     <section id="contact">
