--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 
     <!-- Header -->
-<div class = "header-about">
+<div>
     <header class = "banner">
         <div class="container">
             <div class="row">
@@ -111,8 +111,8 @@
 </div>
 
     <!-- Portfolio Grid Section -->
-<div class = "port-background">
-    <section id="portfolio">
+<div>
+    <section id="portfolio" class = "port-background">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
