--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 </div>
 
     <!-- Portfolio Grid Section -->
-<div>
-    <section id="portfolio" class = "port-background">
+<div class = "port-background">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
