--- a/index.html
+++ b/index.html
@@ -100,11 +100,6 @@
                         <br> 
                     It is this commitment that drives me to excel on each project I work on. The end goal for each project varies, and is why I listen and accommodate the needs of the client to cultivate a business relationship that creates a win-win environment.</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Top
-                    </a>
-                </div>
             </div>
         </div>
     </section>
@@ -234,6 +229,11 @@
                           <input type="hidden" name="_next" value="//jessehadley.com/thanks" />
                           <input type="hidden" name="_subject" value="New submission!" />
                     </form>
+                    <div class="col-lg-12 col-lg-offset-2 text-center top-button">
+                    <a href="#" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Top
+                    </a>
+                </div>
                 </div>
             </div>
         </div>
@@ -295,7 +295,7 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <div class="portfolio-modal portfolio-modal:hover modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
