--- a/index.html
+++ b/index.html
@@ -197,25 +197,25 @@
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Name</label>
-                          <input type="text" class="form-control" name="Name" placeholder="Name">
+                          <input type="text" class="form-control" name="Name" required placeholder="Name">
                        </div>
                      </div>
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Email</label>
-                          <input type="email" class="form-control" name="Email" placeholder="Email">
+                          <input type="email" class="form-control" name="Email" required placeholder="Email">
                        </div>
                      </div>
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Phone Number</label>
-                          <input type="text" class="form-control" name="Phone Number" placeholder="Phone Number">
+                          <input type="text" class="form-control" name="Phone Number" required placeholder="Phone Number">
                         </div>
                      </div>
                      <div class="row control-group">
                        <div class="form-group col-xs-12 floating-label-form-group controls">
                           <label>Message</label>
-                          <textarea rows="5" class="form-control" name="Message" placeholder="Message"></textarea>
+                          <textarea rows="5" class="form-control" name="Message" required placeholder="Message"></textarea>
 
                        </div>
                      </div>
