--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Jesse Hadley Web Services</a>
+                <a class="navbar-brand" href="#page-top">Jesse Hadley Web Design</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -270,7 +270,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Jesse Hadley Web Services</h3>
+                        <h3>Jesse Hadley Web Design</h3>
                         <p>For Web Development inquiries, please send me a message in the form above</p>
                     </div>
                 </div>
