--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                           <input type="hidden" name="_next" value="//jessehadley.com/thanks" />
                           <input type="hidden" name="_subject" value="New submission!" />
                     </form>
-                    <div class="col-lg-12 top-button">
+                    <div class="col-lg-12 text-center top-button">
                     <a href="#" class="btn-social btn-outline">
                         <i class="fa fa-download"></i> Top
                     </a>
