--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                           <input type="hidden" name="_subject" value="New submission!" />
                     </form>
                     <div class="col-lg-12 text-center top-button">
-                    <a href="#" class="btn-social btn-outline">
+                    <a href="#" class="btn btn-success btn-lg">
                         <i class="fa fa-download"></i> Top
                     </a>
                 </div>
