--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                         <i class="fa fa-download"></i> Top
                     </a>
                 </div>
-                <div class = "col-lg-12 text-center top-button">
+                <div class = "col-lg-12 text-right top-button">
                     <a href = "#" class = "btn btn-social btn-outline">
-                        <i class = "fa fa-download"></i> Top
+                        <i ></i> Top
                     </a>
                 </div>
             </div>
