--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </div>
                 <div class = "col-lg-12 text-right top-button">
                     <a href = "#" class = "btn btn-social btn-outline">
-                        <i ></i> Top
+                        <i class = "fa fa-fw"></i> Top
                     </a>
                 </div>
             </div>
