--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                         <i class="fa fa-download"></i> Top
                     </a>
                 </div>
-                <div class = "col-lg-12 text-right top-button">
-                    <a href = "#" class = "btn btn-social btn-outline">
+                <div class = "col-lg-12 text-center top-button">
+                    <a href = "#" class = "btn btn-social-top btn-outline-top">
                         <i class = "fa fa-fw"></i> Top
                     </a>
                 </div>
