--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </a>
                 </div>
                 <div class = "col-lg-12 text-center top-button">
-                    <a href = "#" class = "btn btn-social-top btn-outline-top">
+                    <a href = "#" class = "btn-social-top btn-outline-top">
                         <i class = "fa fa-fw"></i> Top
                     </a>
                 </div>
