--- a/index.html
+++ b/index.html
@@ -235,9 +235,8 @@
                     </a>
                 </div>
                 <div class = "col-lg-12 text-center top-button">
-                    <a href = "#" class = "btn btn-social btn-outline-top">
-                        <i class = "fa fa-fw"></i> Top
-                    </a>
+                    <li>
+                        <a href="#page-top" class="btn-social btn-outline"><i class="fa fa-fw "></i><img class = "icons-fb" src = "images/facebook-icon.png"></a>
                 </div>
             </div>
         </div>
