--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </a>
                 </div>
                 <div class = "col-lg-12 text-center top-button">
-                        <a href="#page-top" class="btn-social btn-outline"><i class="fa fa-fw "></i><img class = "icons-fb" src = "images/top-arrow.png"></a>
+                        <a href="#page-top"><i class="fa fa-fw "></i><img class = "icons-fb" src = "images/top-arrow.png"></a>
                 </div>
             </div>
         </div>
