--- a/index.html
+++ b/index.html
@@ -229,13 +229,11 @@
                           <input type="hidden" name="_next" value="//jessehadley.com/thanks" />
                           <input type="hidden" name="_subject" value="New submission!" />
                     </form>
-                    <div class="col-lg-12 text-center top-button">
-                    <a href="#" class="btn btn-success btn-lg">
-                        <i class="fa fa-download"></i> Top
-                    </a>
-                </div>
+                    
                 <div class = "col-lg-12 text-center top-button">
+                    <div class = "top-button">
                         <a href="#page-top"><i class="fa fa-fw "></i><img class = "icons-fb" src = "images/top-arrow.png"></a>
+                    </div>
                 </div>
             </div>
         </div>
