--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                     </form>
                     
                 <div class = "col-lg-12 text-center top-button">
-                    <div class = "top-button">
-                        <a href="#page-top"><i class="fa fa-fw "></i><img class = "icons-fb" src = "images/top-arrow.png"></a>
+                    <div>
+                        <a href="#page-top"><i class="fa fa-fw "></i><img class = "btn-top" src = "images/top-arrow.png"></a>
                     </div>
                 </div>
             </div>
