--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
                           <input type="hidden" name="_next" value="//jessehadley.com/thanks" />
                           <input type="hidden" name="_subject" value="New submission!" />
                     </form>
+                    <div class = "bottom-padding">
+                    </div>
                 </div>
             </div>
         </div>
