--- a/index.html
+++ b/index.html
@@ -94,11 +94,16 @@
             </div>
             <div class="row">
                 <div class="col-xs-6 col-sm-12 inline-about">
-                    <img class="img-responsive" src="img/profile.png" alt="">
-                    <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance.</p> 
-                        <br>
+                  <img class="img-responsive" src="img/profile.png" alt="">
+                  <div class"row">
+                    <div class ="col-xs-6 col-sm-12">
+                      <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance.</p> 
+                    </div>
                         <br> 
-                    <p>It is this commitment that drives me to excel on each project I work on. The end goal for each project varies, and is why I listen and accommodate the needs of the client to cultivate a business relationship that creates a win-win environment.</p>
+                        <div class="col-xs-6 col-sm-12"
+                      <p>It is this commitment that drives me to excel on each project I work on. The end goal for each project varies, and is why I listen and accommodate the needs of the client to cultivate a business relationship that creates a win-win environment.</p>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
