--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <!-- About Section -->
     <section class="banner" id="about">
-        <div class="container about-container">
+        <div class="container aboutcontainer">
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h2>About</h2>
@@ -93,17 +93,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6 col-sm-12 inline-about">
+                <div class="col-xs-6 col-sm-4 inline-about">
                   <img class="img-responsive" src="img/profile.png" alt="">
-                  <div class"row">
-                    <div class ="col-xs-6 col-sm-12">
-                      <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance.</p> 
-                    </div>
-                        <br> 
-                        <div class="col-xs-6 col-sm-12">
+                      <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance.</p>
+                        <br>
                       <p>It is this commitment that drives me to excel on each project I work on. The end goal for each project varies, and is why I listen and accommodate the needs of the client to cultivate a business relationship that creates a win-win environment.</p>
-                    </div>
-                  </div>
+                    
                 </div>
             </div>
         </div>
