--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <!-- About Section -->
     <section class="banner" id="about">
-        <div class="container aboutcontainer">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 text-center">
                     <h2>About</h2>
