--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </nav>
 
     <!-- Header -->
-<div>
-    <header class = "banner">
+<section class="banner">
+    <header>
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
@@ -84,7 +84,7 @@
     </header>
 
     <!-- About Section -->
-    <section class="banner" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 text-center">
@@ -102,7 +102,7 @@
             </div>
         </div>
     </section>
-</div>
+</section>
 
     <!-- Portfolio Grid Section -->
 <div class = "port-background">
