--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     </nav>
 
     <!-- Header -->
-<section class="banner">
+<div>
     <header>
+      <div class="banner">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
@@ -81,11 +82,12 @@
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+   </header>
 
     <!-- About Section -->
     <section id="about">
-        <div class="container">
+        <div class="container banner">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 text-center">
                     <h2>About</h2>
@@ -102,7 +104,7 @@
             </div>
         </div>
     </section>
-</section>
+</div>
 
     <!-- Portfolio Grid Section -->
 <div class = "port-background">
