--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Jesse Hadley Web Design</a>
+                <a class="navbar-brand" href="#page-top">Jesse Hadley</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
