--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="imgages/portfolio.jpeg" class="img-responsive" alt="">
+                        <img src="/imgages/portfolio.jpeg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -319,7 +319,7 @@
                                     <strong>January 2016</strong>
                                 </li>
                                 <li>Service:
-                                    <a href="http://jessehadley.com"><strong>Self-Created Portfolio</strong></a>
+                                    <strong>Self-Created Portfolio</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
