--- a/index.html
+++ b/index.html
@@ -353,8 +353,7 @@
                                     <strong></strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://jessehadley.com">Web Development</a>
-                                    </strong>
+                                    <strong>Web Development</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -388,8 +387,7 @@
                                     <strong></strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://jessehadley.com">Web Development</a>
-                                    </strong>
+                                    <strong>Web Development</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -423,8 +421,7 @@
                                     <strong></strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://jessehadley.com">Web Development</a>
-                                    </strong>
+                                    <strong>Web Development</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -458,8 +455,7 @@
                                     <strong></strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://jessehadley.com">Web Development</a>
-                                    </strong>
+                                    <strong>Web Development</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -493,8 +489,7 @@
                                     <strong></strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://jessehadley.com">Web Development</a>
-                                    </strong>
+                                    <strong>Web Development</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
