--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </nav>
 
     <!-- Header -->
+<section>
 <div class="banner">
     <header>
       <div>
@@ -105,6 +106,7 @@
         </div>
     </section>
 </div>
+</section>
 
     <!-- Portfolio Grid Section -->
 <div class = "port-background">
