--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </nav>
 
     <!-- Header -->
-<div class="banner">
-    <header>
+<div>
+    <header class="banner">
       <div>
         <div class="container">
             <div class="row">
