--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 
     <!-- Header -->
-<div class="banner">
+<div class="col-sm-12 banner">
     <header>
       <div>
         <div class="container">
