--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!-- Portfolio Grid Section -->
 <div class = "port-background">
-    <section id="#portfolio">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
