--- a/index.html
+++ b/index.html
@@ -97,9 +97,13 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8 inline-about">
                     <img class="img-responsive-profile" src="img/profile.png" alt="Jesse Hadley">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-8 inline-about"
                       <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance.</p>
                         <br>
                       <p class="paragraph-about">It is this commitment that drives me to excel on each project I work on. The end goal for each project varies, and is why I listen and accommodate the needs of the client to cultivate a business relationship that creates a win-win environment.</p>
+                  </div>
+              </div>
                 </div>
             </div>
         </div>
