--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-12">
-                  <img class="img-responsive-profile" src="img/profile.png" alt="Jesse Hadley">
+                <div class="col-xs-12 col-sm-8">
+                  <img class="img-responsive-profile img-centered" src="img/profile.png" alt="Jesse Hadley">
                 </div>
                     <div class="col-xs-12 col-sm-8 inline-about">
                       <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance.</p>
