--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
-                  <img class="img-responsive-profile img-centered" src="img/profile.png" alt="Jesse Hadley">
+                  <img class="img-responsive-profile img-centered-about" src="img/profile.png" alt="Jesse Hadley">
                 </div>
             </div>
                 <div class="row">
