--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-xs-12 col-sm-6"
                     <div class="img-centered-about" title="Jesse Hadley">
                     </div>
+                </div>
             </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 inline-about">
