--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </nav>
 
     <!-- Header -->
-<section class="banner">
+<figure>
+<div class="banner">
     <header>
       <div>
         <div class="container">
@@ -109,7 +110,8 @@
                 </div>
         </div>
     </section>
-</section>
+</div>
+</figure>
 
     <!-- Portfolio Grid Section -->
 <div class = "port-background">
